tests/NormalTests/paczka1/small_fuzzy/38037000.err
Error in line 5: Jkkw A998 0,7
Error in line 6: Jkkw A158 76,8
Error in line 12: Jkkw S857 196,48
